--- a/MiaSample/app/src/main/AndroidManifest.xml
+++ b/MiaSample/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity
             android:name=".activity.InputKeysActivity" />
+        <activity android:name=".activity.SubscriptionActivity" />
     </application>
 
 </manifest>
